--- a/frontend/package.json
+++ b/frontend/package.json
@@ -2,6 +2,8 @@
   "name": "frontend",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://braga.com.ng",
+  "proxy": "https://api.braga.com.ng/api/v2",
   "dependencies": {
     "@reduxjs/toolkit": "^1.8.1",
     "@testing-library/jest-dom": "^5.14.1",
@@ -50,6 +52,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "proxy": "http://localhost:8080/api/v2"
+  }
 }
