--- a/admin/package.json
+++ b/admin/package.json
@@ -16,6 +16,7 @@
     "react-scripts": "^5.0.1",
     "react-toastify": "^9.0.1",
     "styled-components": "^5.3.5",
+    "sweetalert2": "^11.4.18",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -41,5 +42,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "proxy": "http://localhost:8080"
 }
