--- a/admin/package.json
+++ b/admin/package.json
@@ -8,12 +8,14 @@
     "@testing-library/user-event": "^13.5.0",
     "antd": "^4.20.5",
     "axios": "^0.27.2",
+    "jwt-decode": "^3.1.2",
     "moment": "^2.29.4",
     "react": "^18.1.0",
     "react-data-table-component": "^7.5.2",
     "react-dom": "^18.1.0",
     "react-icons": "^4.3.1",
     "react-number-format": "^4.9.3",
+    "react-quill": "^1.3.5",
     "react-router-dom": "^6.3.0",
     "react-scripts": "^5.0.1",
     "react-text-truncate": "^0.19.0",
