--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-icons": "^4.3.1",
+    "react-lazyload": "^3.2.0",
     "react-multi-carousel": "^2.8.2",
     "react-number-format": "^4.9.1",
     "react-paystack": "^3.0.5",
