--- a/package.json
+++ b/package.json
@@ -5,10 +5,9 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "server": "nodemon api/server.js",
     "admin": "npm start --prefix admin",
     "client": "npm start --prefix frontend",
-    "dev": "concurrently \"npm run server\" \"npm run client\""
+    "dev": "concurrently \"npm run admin\" \"npm run client\""
   },
   "keywords": [],
   "author": "",
