--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,8 +11,10 @@
     "@testing-library/user-event": "^13.2.1",
     "antd": "^4.19.5",
     "axios": "^0.26.1",
+    "date-fns": "^2.28.0",
     "moment": "^2.29.4",
     "react": "^18.0.0",
+    "react-date-range": "^1.4.0",
     "react-dom": "^18.0.0",
     "react-icons": "^4.3.1",
     "react-lazyload": "^3.2.0",
