--- a/admin/package.json
+++ b/admin/package.json
@@ -20,6 +20,7 @@
     "react-scripts": "^5.0.1",
     "react-text-truncate": "^0.19.0",
     "react-toastify": "^9.0.1",
+    "recharts": "^2.1.13",
     "styled-components": "^5.3.5",
     "sweetalert2": "^11.4.18",
     "web-vitals": "^2.1.4"
