--- a/admin/package.json
+++ b/admin/package.json
@@ -2,6 +2,8 @@
   "name": "admin",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://admin.braga.com.ng",
+  "proxy": "https://www.api.braga.com.ng",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.2.0",
@@ -48,6 +50,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "proxy": "http://localhost:8080"
+  }
 }
