--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,6 +5,8 @@
   "homepage": "https://braga.com.ng",
   "proxy": "https://api.braga.com.ng/api/v2",
   "dependencies": {
+    "@cloudinary/react": "^1.4.2",
+    "@cloudinary/url-gen": "^1.8.6",
     "@reduxjs/toolkit": "^1.8.1",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
@@ -17,11 +19,13 @@
     "react-date-range": "^1.4.0",
     "react-dom": "^18.0.0",
     "react-icons": "^4.3.1",
+    "react-lazy-load-image-component": "^1.5.5",
     "react-lazyload": "^3.2.0",
     "react-multi-carousel": "^2.8.2",
     "react-number-format": "^4.9.1",
     "react-paystack": "^3.0.5",
     "react-redux": "^8.0.0",
+    "react-responsive-carousel": "^3.2.23",
     "react-router": "6",
     "react-router-dom": "6",
     "react-scripts": "5.0.1",
