--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "@testing-library/user-event": "^13.2.1",
     "antd": "^4.19.5",
     "axios": "^0.26.1",
+    "cloudinary-react": "^1.8.1",
     "date-fns": "^2.28.0",
     "moment": "^2.29.4",
     "react": "^18.0.0",
