--- a/package.json
+++ b/package.json
@@ -20,11 +20,16 @@
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "express-async-handler": "^1.2.0",
+    "express-mongo-sanitize": "^2.2.0",
+    "express-rate-limit": "^6.5.2",
+    "helmet": "^6.0.0",
+    "hpp": "^0.2.3",
     "jsonwebtoken": "^8.5.1",
+    "moment": "^2.29.3",
     "mongoose": "^6.3.4",
     "multer": "^1.4.5-lts.1",
-    "moment": "^2.29.3",
-    "paystack": "^2.0.1"
+    "paystack": "^2.0.1",
+    "xss-clean": "^0.1.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.16"
